--- a/.settings/org.sonar.ide.eclipse.core.prefs
+++ b/.settings/org.sonar.ide.eclipse.core.prefs
@@ -1,5 +1,5 @@
 eclipse.preferences.version=1
 extraProperties=
-projectKey=com.asosyalbebe.springio\:springio
+projectKey=com.asosyalbebe\:J2EE-Starter-Pack
 serverUrl=http\://localhost\:9000
 version=2
