--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<junit.version>4.11</junit.version>
 		<slf4j.version>1.5.8</slf4j.version>
 		<log4j.version>1.2.14</log4j.version>
+		<spring.security.version>3.2.6.RELEASE</spring.security.version>
 	</properties>
 
 	<dependencies>
@@ -60,6 +61,19 @@
 			<version>${spring.version}</version>
 		</dependency>
 
+		<!-- Spring Security -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${spring.security.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${spring.security.version}</version>
+		</dependency>
+
 		<!-- jstl -->
 		<dependency>
 			<groupId>jstl</groupId>
@@ -88,7 +102,7 @@
 			<artifactId>log4j</artifactId>
 			<version>${log4j.version}</version>
 		</dependency>
-		
+
 		<!-- Unit Test -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -96,11 +110,19 @@
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<!-- SERVLET API -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
 		<defaultGoal>dev</defaultGoal>
-		
+
 		<resources>
 			<resource>
 				<directory>src/main/resources</directory>
