--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,12 +18,12 @@
 	</listener>
 
 	<filter>
-		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-name>filterChainProxy</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 	</filter>
 
 	<filter-mapping>
-		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-name>filterChainProxy</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
