--- a/src/main/config-dev/hibernate.properties
+++ b/src/main/config-dev/hibernate.properties
@@ -11,4 +11,4 @@ hibernate.connection.release_mode=on_close
 hibernate.hbm2ddl.auto=update
 hibernate.cache.use_query_cache=true
 hibernate.cache.use_second_level_cache=true
-hibernate.cache.provider_class=org.hibernate.cache.HashtableCacheProvider
+hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.SingletonEhCacheRegionFactory
