--- a/pom.xml
+++ b/pom.xml
@@ -228,6 +228,14 @@
 			<artifactId>tiles-jsp</artifactId>
 			<version>${apache.tiles.version}</version>
 		</dependency>
+		
+		<!-- Jackson JSON Mapper -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.6.0-rc1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
