Maven Tomcat Plugin tutorial added to README. Database name is updated in database.properties file.

--- a/src/main/config-dev/database.properties
+++ b/src/main/config-dev/database.properties
@@ -1,5 +1,5 @@
 database.password=root
-database.jdbcUrl=jdbc\:mysql\://localhost\:3306/j2eeDB?useUnicode=true&characterEncoding=UTF-8
+database.jdbcUrl=jdbc\:mysql\://localhost\:3306/j2eestarter?useUnicode=true&characterEncoding=UTF-8
 database.user=root
 database.driverClass=com.mysql.jdbc.Driver
 database.minPoolSize=30
